openvpn/tests/iptables
# Generated by iptables-save v1.4.7 on Wed Oct 23 17:46:45 2013
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [30:3383]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
# management
-A INPUT -s 172.16.9.0/24 -j ACCEPT
-A FORWARD -s 172.16.9.0/24 -j ACCEPT 
-A INPUT -s 172.16.1.0/24 -j ACCEPT
-A FORWARD -s 172.16.1.0/24 -j ACCEPT 

# cobbler
#-A INPUT -s 0.0.0.0 -i eth1 -p tcp -m state --state NEW -m multiport --dports 67,69,80,443,873,25151 -j ACCEPT 
#-A INPUT -s 0.0.0.0 -i eth1 -p udp -m state --state NEW -m multiport --dports 67,69,80,443,873,25151 -j ACCEPT 
#-A INPUT -s 203.156.200.162/32 -p tcp -m state --state NEW -m multiport --dports 80,443,25151 -j ACCEPT 
#-A INPUT -m state --state NEW -i eth0 -p udp --dport 69 -j ACCEPT

# openssh
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 41922 -j ACCEPT 

# openvpn
-A INPUT -p tcp -m state --state NEW -m tcp --dport 1194 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 7505 -j ACCEPT 
#-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT 
#-A FORWARD -s 10.0.0.0/24 -d 172.16.1.0/24 -i tun0 -m conntrack --ctstate NEW -j ACCEPT 
#-A FORWARD -s 10.0.0.0/24 -d 172.16.9.0/24 -i tun0 -m conntrack --ctstate NEW -j ACCEPT 
-A INPUT -i tun+ -j ACCEPT 
-A FORWARD -i tun+ -j ACCEPT 

-A INPUT -j REJECT --reject-with icmp-host-prohibited 
-A FORWARD -j REJECT --reject-with icmp-host-prohibited 
COMMIT

*nat
:PREROUTING ACCEPT [10:552]
:POSTROUTING ACCEPT [3:272]
:OUTPUT ACCEPT [3:272]
-A POSTROUTING -s 10.0.0.0/24 -j MASQUERADE 
-A POSTROUTING -s 172.16.1.0/24 -j SNAT --to-source 123.150.200.4
COMMIT
